# PDFSummariesAI

./: Makefile  README.md  app.py  config.py  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
data/: pdf_summaries.db
src/: __init__.py
src/database/: __init__.py  init.py  models.py
src/llm_integration/: __init__.py  pipeline.py  summarizer.py
src/pdf_processor/: __init__.py  chunker.py  extractor.py
src/ui/: __init__.py  app.py  components.py
src/utils/: __init__.py  config.py  exporters.py  logger.py  validators.py
tests/: __init__.py  conftest.py
tests/contract/: __init__.py  test_api_contracts.py  test_database_ops.py  test_llm_summarization.py  test_pdf_extraction.py
tests/fixtures/: README.md  __init__.py
tests/integration/: __init__.py  test_end_to_end.py  test_error_scenarios.py  test_pipeline_integration.py
tests/unit/: test_database.py  test_llm_integration.py  test_pdf_processor.py
